# ComfyUI-ShaderNoiseKSampler

./: .gitattributes  README.md  __init__.py  advanced_comparer.py  direct_shader_ksampler.py  pyproject.toml  shader_noise_ksampler.py  shader_params_reader.py  shader_to_tensor.py  video_comparer.py
data/: shader_params.json
example_workflows/: Advanced_Image_Comparer.json  Flux_Schnell_Basic_SNK_Direct.json  SDXL_Basic_SNK_Direct.json
shaders/: curl_noise.py  domain_warp.py  temporal_coherent_noise.py  tensor_field.py
web/: advanced_comparer.js  gradient_title.js  matrix_button.js  noise_visualizer.js  shader_params_save_button.js  shader_renderer.js  video_comparer.js
workflows/: AnimateDiff_SD1.5_Basic_SNK_Direct.json  HunyuanVideo_T2V_720p_GGUF_Basic_SNK_Direct.json  LTXV_T2V_2bv9.5_Basic_SNK_Direct.json  WAN2.1_T2V_1.3B_Basic_SNK_Direct.json
