[project]
name = "shadernoiseksampler"
description = "ComfyUI-ShaderNoiseKSampler is an advanced custom KSampler node that replaces standard noise generation with a multi-stage shader-based system. Unlike traditional sampling that teleports randomly between different seeds, this tool provides a structured vehicle for exploring the neighborhood around a chosen seed, using mathematical patterns to navigate along coherent paths through latent space."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AEmotionStudio/ComfyUI-ShaderNoiseKSampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-ShaderNoiseKSampler"
Icon = ""
