[project]
name = "comfyui-shadernoiseksampler"
description = "Transform AI image generation from random exploration into deliberate artistic navigation. This advanced KSampler replacement blends traditional noise with shader noise. Navigate latent space with intention using adjustable noise parameters, shape masks, and colors transformations."
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/AEmotionStudio/ComfyUI-ShaderNoiseKSampler"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "aemotionstudio"
DisplayName = "ComfyUI-ShaderNoiseKSampler"
Icon = ""
